--- a/modulo-dinamica.html
+++ b/modulo-dinamica.html
@@ -61,15 +61,15 @@
           </div>          
         </div>
 
-        <div style="text-align: center;">
+        <!-- <div style="text-align: center;">
           <h4>Dinámica - Ensayo 2</h4>
         </div>
         <div class="contenedor-ensayos">
           <div class="imagen-ensayo"> 
             <img src="./imagenes/modulo-dinamica.png" alt="Ensayo 2">           
 
-          </div> 
-          <div class="descripcion-ensayo">
+          </div>  -->
+          <!-- <div class="descripcion-ensayo">
             <p>
               Aquí va la descripcion del ensayo 2.
             </p>
@@ -85,7 +85,7 @@
                 <button class="boton-manual">Descargar manual (.pdf)</button>
               </a>
             </div>
-          </div>        
+          </div>         -->
           
         </div>
         
