--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="imagen-modulo">            
             <div style="text-align:center; justify-content: space-around;">
               <a href="modulo-dinamica.html">
-                <img src="./imagenes/modulo-dinamica.png" alt="Dinámica estructural e ingeniería sísmica" >
+                <img src="./imagenes/modulo-dinamica.jpg" alt="Dinámica estructural e ingeniería sísmica" >
               </a>
             </div>
           </div>
