--- a/modulo-concreto.html
+++ b/modulo-concreto.html
@@ -102,7 +102,34 @@
 
           </div>
 
+        </div>
+        <div style="text-align: center;">
+          <h4>Concreto reforzado a flexión</h4>
+        </div>
+        <div class="contenedor-ensayos">
+          <div class="imagen-ensayo">
+            <img src="./imagenes/CR-flexion.jpg" alt="Concreto reforzado a flexión">
 
+          </div>
+          <div class="descripcion-ensayo">
+            <p>
+              Descripción del ensayo.
+            </p>
+
+            <div class="contenedor-botones">
+              <div>
+                <a href="CR-flexion.html">
+                  <button class="boton-ensayo">Ir al ensayo</button>
+                </a>
+              </div>
+              <div>
+                <a href="manual-concreto-reforzado-flexion.pdf" target="_blank" rel="noopener noreferrer">
+                  <button class="boton-manual">Descargar manual (.pdf)</button>
+                </a>
+              </div>
+            </div>
+
+          </div>
         </div>
 
   </main>
