--- a/modulo-concreto.html
+++ b/modulo-concreto.html
@@ -108,7 +108,7 @@
         </div>
         <div class="contenedor-ensayos">
           <div class="imagen-ensayo">
-            <img src="./imagenes/CR-flexion.jpg" alt="Concreto reforzado a flexión">
+            <img src="./imagenes/CR-flexion.JPG" alt="Concreto reforzado a flexión">
 
           </div>
           <div class="descripcion-ensayo">
