--- a/modulo-dinamica.html
+++ b/modulo-dinamica.html
@@ -55,7 +55,7 @@
               </div>
 
               <div>
-                <a href="" target="_blank" rel="noopener noreferrer">
+                <a href="manual-dinamica.pdf" target="_blank" rel="noopener noreferrer">
                   <button class="boton-manual">Descargar manual (.pdf)</button>
                 </a>
               </div>
