--- a/modulo-mecanica.html
+++ b/modulo-mecanica.html
@@ -43,8 +43,7 @@
           <div class="descripcion-ensayo">
             <p>
               El objetivo de este ensayo es ver la respuesta que tienen diferentes tipos de probetas de acero en ensayos
-              de tracción. Estas pruebas permiten visualizar gráficamente la carga y alargamiento presentado
-              por las probetas.
+              de tracción. Estas pruebas permiten visualizar gráficamente la carga y alargamiento presentado por las probetas.
             </p>
 
             <div class="contenedor-botones">
@@ -55,7 +54,7 @@
               </div>
 
               <div>
-                <a href="" target="_blank" rel="noopener noreferrer">
+                <a href="acero-traccion.pdf" target="_blank" rel="noopener noreferrer">
                   <button class="boton-manual">Descargar manual (.pdf)</button>
                 </a>
               </div>
@@ -86,7 +85,7 @@
                 </a>
               </div>
               <div>
-                <a href="" target="_blank" rel="noopener noreferrer">
+                <a href="madera-flexion.pdf" target="_blank" rel="noopener noreferrer">
                   <button class="boton-manual">Descargar manual (.pdf)</button>
                 </a>
               </div>
@@ -118,7 +117,7 @@
                 </a>
               </div>
               <div>
-                <a href="" target="_blank" rel="noopener noreferrer">
+                <a href="compresion-acero.pdf" target="_blank" rel="noopener noreferrer">
                   <button class="boton-manual">Descargar manual (.pdf)</button>
                 </a>
               </div>
