--- a/concreto-compresion.html
+++ b/concreto-compresion.html
@@ -65,11 +65,26 @@
 
 			<!-- Título del ensayo y manual en pdf -->
 			<div class="col-md-9" style="display: flex;	flex-direction: row; justify-content: space-around;">
-				<p style="text-align:center;">Resistencia del concreto a compresión</p>
-				<div>
-					<a class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank"
-						href="manual-concreto-compresion.pdf">Manual</a>
+				
+				<div style="width:700px; display: flex;	flex-direction: row; justify-content: space-around;">
+					<p style="text-align: center;">Resistencia del concreto a compresión</p>
 				</div>
+				
+				<div style="display: flex;	flex-direction: row-reverse;">
+
+					<div>
+						<a class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank"
+							href="manual-concreto-compresion.pdf">Manual</a>
+					</div>
+					<div>
+						<a class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank"
+							href="concreto-flexion.html">Concreto a flexión</a>
+					</div>
+					<div>
+						<a class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank"
+							href="CR-flexion.html">Concreto reforzado a flexión</a>
+					</div>
+
 			</div>
 		</div>
 	</div>
