--- a/concreto-flexion.html
+++ b/concreto-flexion.html
@@ -79,6 +79,7 @@
 		</header>
 
 		<div style="width: 100%; height: 100%; display: flex; flex-direction: row;">
+
 			<!-- Panel izquierdo -->
 			<div class="position-fixed" style="width: 400px; background-color: #ffffff;padding: 90px 5px; height: 100%;">
 
@@ -430,6 +431,7 @@
 
 				</script>
 			</div>
+		</div>
 	</main>
 </body>
 
