--- a/concreto-flexion.html
+++ b/concreto-flexion.html
@@ -50,7 +50,7 @@
 					<!-- Título del ensayo y manual en pdf -->
 					<div class="col-md-9" style="display: flex;	flex-direction: row; justify-items: auto;">
 
-						<div style="width:700px; display: flex;	flex-direction: row; justify-content: space-around;">
+						<div style="width:600px; display: flex;	flex-direction: row; justify-content: space-around;">
 							<p style="text-align: center;">Resistencia del concreto a flexión</p>
 						</div>
 
@@ -66,7 +66,7 @@
 							</div>
 							<div>
 								<a class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank"
-									href="concreto-flexion.html">Concreto a flexión</a>
+									href="CR-flexion.html">Concreto reforzado a flexión</a>
 							</div>
 
 						</div>
