--- a/modulo-concreto.html
+++ b/modulo-concreto.html
@@ -113,7 +113,7 @@
           </div>
           <div class="descripcion-ensayo">
             <p>
-              Descripción del ensayo.
+              Una viga de concreto reforzado será sometida a flexión pura. A partir de los datos obtenidos el estudiante deberá determinar si hubo falla dúctil o falla frágil, y calcular el momento de agrietamiento, el momento de fluencia y el momento último.
             </p>
 
             <div class="contenedor-botones">
