--- a/concreto-compresion.html
+++ b/concreto-compresion.html
@@ -58,38 +58,35 @@
 			<div class="position-fixed w-100 p-3 border-bottom" style="z-index: 100000;background-color: #ffffff;">
 				<div class="row">
 					<div class="col-md-3">
-						<a href="modulo-concreto.html" style="justify-content: space-between;"
-							class="d-flex align-items-center text-dark text-decoration-none">
+						<a href="modulo-concreto.html" class="d-flex align-items-center text-dark text-decoration-none">
 							<img src="./imagenes/logo-uv-risk-g7.png" style="height: 45px;">
-							<span class="fs-8" style="text-align: right;">LABORATORIOS VIRTUALES</span>
+							<span class="fs-8">LABORATORIOS VIRTUALES</span>
 						</a>
 					</div>
 
 					<!-- Título del ensayo y manual en pdf -->
-					<div class="col-md-9" style="display: flex;	flex-direction: row; justify-content: space-around;">
-
-						<div style="width:700px; display: flex;	flex-direction: row; justify-content: space-around;">
-							<p style="text-align: center;">Resistencia del concreto a compresión</p>
-						</div>
-
-						<div style="display: flex;	flex-direction: row-reverse;">
-
-							<div>
-								<a class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank"
-									href="manual-concreto-compresion.pdf">Manual</a>
-							</div>
-							<div>
-								<a class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank"
-									href="concreto-flexion.html">Concreto a flexión</a>
-							</div>
-							<div>
-								<a class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank"
-									href="CR-flexion.html">Concreto reforzado a flexión</a>
-							</div>
-
-						</div>
+					<div class="col-md-6" style="text-align: center;">
+						<h4>RESISTENCIA DEL CONCRETO A COMPRESIÓN</h4>
 					</div>
+
+					<div class="col-md-1" style="text-align: left;">
+						<a class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank"
+							rel="noopener noreferrer" href="manual-concreto-compresion.pdf">Manual</a>
+					</div>
+
+					<div class="col-md-2" style="text-align: right;">
+
+						<a class="btn btn-sm btn-outline-secondary" target="_blank" rel="noopener noreferrer"
+							href="concreto-flexion.html">Concreto simple a flexión</a>
+
+						<a class="btn btn-sm btn-outline-secondary" target="_blank" rel="noopener noreferrer"
+							href="CR-flexion.html">Concreto reforzado a flexión</a>
+
+					</div>
+					
 				</div>
+			</div>
+
 		</header>
 
 		<div style="width: 100%; height: 100%; display: flex; flex-direction: row;">
