--- a/modulo-concreto.html
+++ b/modulo-concreto.html
@@ -71,7 +71,7 @@
         </div>
 
         <div style="text-align: center;">
-          <h4>Resistencia del concreto a flexión</h4>
+          <h4>Resistencia del concreto simple a flexión</h4>
         </div>
         <div class="contenedor-ensayos">
           <div class="imagen-ensayo">
@@ -104,7 +104,7 @@
 
         </div>
         <div style="text-align: center;">
-          <h4>Concreto reforzado a flexión</h4>
+          <h4>Resistencia del concreto reforzado a flexión</h4>
         </div>
         <div class="contenedor-ensayos">
           <div class="imagen-ensayo">
