--- a/concreto-flexion.html
+++ b/concreto-flexion.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" &amp;gt;>
 	<link rel="icon" href="./imagenes/computer-icon-small.png">
 
-	<title>Resistencia del concreto a flexión</title>
+	<title>Resistencia del concreto simple a flexión</title>
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -40,38 +40,31 @@
 			<div class="position-fixed w-100 p-3 border-bottom" style="z-index: 100000;background-color: #ffffff;">
 				<div class="row">
 					<div class="col-md-3">
-						<a href="modulo-concreto.html" style="justify-content: space-between;"
-							class="d-flex align-items-center text-dark text-decoration-none">
+						<a href="modulo-concreto.html" class="d-flex align-items-center text-dark text-decoration-none">
 							<img src="./imagenes/logo-uv-risk-g7.png" style="height: 45px;">
 							<span class="fs-8">LABORATORIOS VIRTUALES</span>
 						</a>
 					</div>
 
 					<!-- Título del ensayo y manual en pdf -->
-					<div class="col-md-9" style="display: flex;	flex-direction: row; justify-items: auto;">
-
-						<div style="width:600px; display: flex;	flex-direction: row; justify-content: space-around;">
-							<p style="text-align: center;">Resistencia del concreto a flexión</p>
-						</div>
-
-						<div style="display: flex;	flex-direction: row-reverse;">
-
-							<div>
-								<a class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank"
-									href="manual-concreto-flexion.pdf">Manual</a>
-							</div>
-							<div>
-								<a class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank"
-									href="concreto-compresion.html">Concreto a compresión</a>
-							</div>
-							<div>
-								<a class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank"
-									href="CR-flexion.html">Concreto reforzado a flexión</a>
-							</div>
-
-						</div>
+					<div class="col-md-6" style="text-align: center;">
+						<h4>RESISTENCIA DEL CONCRETO SIMPLE A FLEXIÓN</h4>
 					</div>
 
+					<div class="col-md-1" style="text-align: left;">
+						<a class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank"
+							rel="noopener noreferrer" href="manual-concreto-flexion.pdf">Manual</a>
+					</div>
+
+					<div class="col-md-2" style="text-align: right;">
+
+						<a class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank"
+							rel="noopener noreferrer" href="concreto-compresion.html">Concreto a compresión</a>
+
+						<a class="btn btn-sm btn-outline-secondary" style="text-align: right;" target="_blank"
+							rel="noopener noreferrer" href="CR-flexion.html">Concreto reforzado a flexión</a>
+
+					</div>
 
 				</div>
 			</div>
