--- a/concreto-compresion.html
+++ b/concreto-compresion.html
@@ -58,7 +58,7 @@
 			<div class="position-fixed w-100 p-3 border-bottom" style="z-index: 100000;background-color: #ffffff;">
 				<div class="row">
 					<div class="col-md-3">
-						<a href="modulo-concreto.html" class="d-flex align-items-center text-dark text-decoration-none">
+						<a href="index.html" class="d-flex align-items-center text-dark text-decoration-none">
 							<img src="./imagenes/logo-uv-risk-g7.png" style="height: 45px;">
 							<span class="fs-8">LABORATORIOS VIRTUALES</span>
 						</a>
